# MWTK

./: .gitignore  CMakeLists.txt  DapInGroupForStm32fG0.cfg  JUSTC.ioc  JUSTD.ioc  JUSTOS.ioc  JUST_Dboard.ioc  README.md
justfw/: CMakeLists.txt
justfw/app/: MyTestApp.c
justfw/app/Brush775Test/: Brush775Test.c
justfw/app/Drat/: drat.c  drat.h  drat_motor.c
justfw/app/Engineer/chassis/: engin_chassis.c  engin_chassis.h  engin_chassis_motors.c
justfw/app/Engineer/little_hand/: engin_little_hand.h  engin_little_hand_cli.c  engin_little_hand_controll.c  engin_little_hand_motor.c  engin_little_hand_position.c
justfw/app/Infantry/inc/: infantry.h  infantry_chasis.h  infantry_gimbal.h
justfw/app/Infantry/src/: infantry.c  infantry_chassis.c  infantry_gimbal.c
justfw/app/mw_orethrowing/: MWchassis.c  MWchassisLOGIC.c  MWchassisLOGIC.h  gimbal.c  gimbal.h  gripper.c  gripper.h  orechassis.c  orechassis.h
justfw/app/test/: SuperBig.h  Superbig.c  test_app.c
justfw/config/: BSP_USB_cfg.h  console_cfg.h  justfw_cfg.h  tinybus_confg.h
justfw/config/bsp_cfg/: BSP_UART_cfg.h  BSP_USB_cfg.h
justfw/config/modules_cfg/: buzzer_config.h  modules_config.h  motor_manager_config.h
justfw/config/sys_cfg/: console_cfg.h
justfw/doc/: quick_start.md
justfw/doc/CLI/: motor_cli.md
justfw/doc/IOC/: JUSTD-next.ioc
justfw/doc/config/modules_cfg/: motor_manager_config.h
justfw/doc/config/sys_cfg/: stream_cfg.h
justfw/doc/quick_start/: README.md
justfw/doc/quick_start/vscode/: launch.json  vscode_zh.md
justfw/interface/: interface.h  intf_can.h  intf_chassis.h  intf_dr16.h  intf_gimbal.h  intf_motor.h  intf_motor_manager.h
justfw/lib/QuaternionEKF/: QuaternionEKF.c
justfw/lib/fifo/: fifo.h
justfw/lib/freertos_cli/: FreeRTOS_CLI.c  FreeRTOS_CLI.h
justfw/lib/userlib/: user_lib.h
justfw/modules/: modules.c  modules.h
justfw/modules/DR16/: DR16.c  DR16.h
justfw/modules/cli/: CLI.c  console_cfg.h  console_colors.h
justfw/modules/motor_manager/: motor_manager.c  motor_manager.h
justfw/modules/storage/: readme.md  storage.c
justfw/sys/: sys.c  sys.h
justfw/sys/interface/: intf_can.h  intf_serial.h  intf_stream.h  intf_sys.h  intf_tinybus.h  intf_uart.h
(+91 files in other folders)
